--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -47,73 +47,8 @@ https://github.com/phaseshift-studio/fhatos[🐙 **source code**]
 == FhatOS Boot Loader
 
 ++++
-<!-- 🐖 ./boot_runner.out -->
+<!--  ./boot_runner.out -->
 ++++
-
-[source,mmadt,subs="verbatim"]
-----
-            PhaseShift Studio Presents 
- <`--'>____  ______ __  __  ______  ______  ______  ______ 
- /. .  `'  \/\  ___/\ \_\ \/\  __ \/\__  _\/\  __ \/\  ___\ 
-(`')  ,     @ \  __\ \  __ \ \  __ \/_/\ \/\ \ \_\ \ \___  \ 
- `-._,     / \ \_\  \ \_\ \_\ \_\ \_\ \ \_\ \ \_____\/\_____\ 
-    )-)_/-(>  \/_/   \/_/\/_/\/_/\/_/  \/_/  \/_____/\/_____/ 
-                                   A Dogturd Stynx Production 
-    fhatos-0.1-alpha > linux-6.8.0-52-generic > x86_64
-       [x86_64]
-      Use noobj for noobj
-      .oO loading system objs Oo.
-[INFO]  [/sys/scheduler] scheduler started
-[INFO]  [/sys/router] router started
-[INFO]  [/sys/router] main memory [total=>7040]
-[INFO]  [/sys/router] heap <none> spanning /sys/# attached
-[INFO]  [/sys/router] heap <none> spanning /mnt/# attached
-[INFO]  [/sys/router] heap /mnt/boot spanning /boot/# attached
-[INFO]  [/sys/router] ../../../conf/boot_config.obj boot config file loaded (size: 746 bytes)
-[WARN]  [/sys/router] router has no auto-prefix configuration: noobj
-[INFO]  [/sys/router] 
-  [
-    router=>[resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]]
-    scheduler=>[def_stack_size=>8096]
-    mqtt=>[broker=>mqtt://chibi.local:1883,client=>fhatos_client,cache=>true]
-    wifi=>[ssid=>Rodkins-2G,password=>'puppymama',mdns=>fhatos]
-    ota=>[host=>mdns://fhatos_client:3232]
-    console=>[terminal=>[stdout=>/io/terminal/:stdout,stdin=>/io/terminal/:stdin],nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288]
-    fs=>[root=>./data/fs]
-  ]@/boot/config
-[INFO]  [/sys/router] router boot config dropped
-[INFO]  [/sys/router] scheduler boot config dropped
-[INFO]  [/sys/router] /sys/lib/heap type imported
-[INFO]  [/sys/router] /sys/lib/mqtt type imported
-[INFO]  [/sys/router] /sys/lib/bus type imported
-[INFO]  [/sys/router] heap /mnt/fos spanning /fos/# attached
-      .oO loading mmadt lang Oo.
-[INFO]  [/sys/router] heap /mnt/mmadt spanning /mmadt/# attached
-      .oO loading fos models Oo.
-[INFO]  [/sys/router] heap /mnt/io spanning /io/# attached
-[INFO]  [/sys/router] /io/terminal obj loaded
-[INFO]  [/sys/router] /io/parser obj loaded
-[INFO]  [/io/log] switching from boot logger to system logger
-[INFO]  [/sys/router] /io/log obj loaded
-[INFO]  [/sys/router] log boot config dropped
-[INFO]  [/sys/router] heap /mnt/cache spanning +/# attached
-[INFO]  [/sys/type] /sys/structure/lib/fs/:create type defined
-[INFO]  [/sys/router] /io/lib/fs type imported
-[INFO]  [/mnt/disk] /home/killswitch/software/fhatos/build/docs/build/data/fs file system location mounted
-[INFO]  [/sys/router] fs /mnt/disk spanning /disk/# attached
-[INFO]  [/sys/router] fs boot config dropped
-[INFO]  [/mnt/mqtt] /mnt/mqtt mqtt [broker=>mqtt://chibi.local:1883,client=>fhatos_client,cache=>true] connected
-[INFO]  [/mnt/mqtt] [/mnt/mqtt/cache]=subscribe=>[//io/#]
-[INFO]  [/mnt/mqtt] cache enabled
-[INFO]  [/sys/router] mqtt /mnt/mqtt spanning //io/# attached
-[INFO]  [/sys/router] mqtt boot config dropped
-[INFO]  [/mnt/bus] mapping /bus==>//io
-[INFO]  [/sys/router] bus /mnt/bus spanning /bus/# attached
-[INFO]  [/io/console] thread spawned: inst()[cpp]
-[INFO]  [/sys/router] /io/console obj loaded
-[INFO]  [/sys/router] console boot config dropped
-----
-
 
 === Booting on Linux/Unix/Mac
 
@@ -140,7 +75,23 @@ The FhatOS scheduler and router are accessible to the user when their respective
  b => [c => /
   [d => e]]]
 -->
+
 ++++
+
+[source,mmadt]
+----
+fhatos> [a => b,
+         b => [c =>
+          [d => e]]]
+=>[
+==>a=>b
+==>b=>[
+===>c=>[d=>e]
+=>]
+=>]
+
+----
+
 
 [source,mmadt]
 ----
@@ -162,7 +113,45 @@ fhatos> [a => b,
 */sys/scheduler
 */sys/router
 -->
+
 ++++
+
+[source,mmadt]
+----
+fhatos> */sys/scheduler
+=>[
+==>barrier=>noobj
+==>process=>[
+=>]
+==>config=>[
+===>def_stack_size=>8096
+=>]
+=>]@/sys/scheduler
+fhatos> */sys/router
+=>[
+==>structure=>[
+===>/sys/#
+===>/mnt/#
+===>/boot/#
+===>/fos/#
+===>/mmadt/#
+===>/io/#
+===>+/#
+===>/disk/#
+===>//io/#
+===>/bus/#
+=>]
+==>frame=>[rec][_]
+==>config=>[
+===>resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]
+=>]
+==>query=>[
+===>write=>[lock=>lock?obj{?}<=obj{?}()[cpp],sub=>sub?obj{?}<=obj()[cpp]]
+=>]
+=>]@/sys/router
+
+----
+
 
 [source,mmadt]
 ----
@@ -216,121 +205,243 @@ fURI encoding of the mmADT language
 ----
 fhatos> */mmadt/#/
 =>[
-==>/mmadt/within=>within(from(0?code,noobj)[cpp])
-==>/mmadt/uri/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/merge=>merge?objs{*}<=uri(from(0?count,2147483647)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/lshift=>lshift(level=>1)[cpp]
-==>/mmadt/uri/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/uri=>[uri][_]
-==>/mmadt/type=>type?uri<=obj{?}(from(0?obj,_)[cpp])[cpp]
-==>/mmadt/to=>to(from(0?uri,noobj)[cpp],from(1?retain,true)[cpp])[cpp]
-==>/mmadt/sum=>sum?obj<=objs{*}()
-==>/mmadt/str/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/sum=>sum?str<=objs{*}()[cpp]
-==>/mmadt/str/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/merge=>merge?objs{*}<=str(from(0?count,2147483647)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/str=>[str][_]
-==>/mmadt/start=>start?objs{*}<=noobj{.}(from(0?starts,noobj)[cpp])[cpp]
-==>/mmadt/split=>split(from(0?poly,noobj)[cpp])[cpp]
-==>/mmadt/rshift=>rshift()
-==>/mmadt/repeat=>repeat(from(0?code,noobj)[cpp],from(1?until,true)[cpp],from(2?emit,false)[cpp])[cpp]
-==>/mmadt/ref=>ref?obj{?}<=obj{?}(from(0?id,noobj)[cpp],from(1?retain,true)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/rshift=>rshift(from(0?prefix,noobj)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/merge=>merge?objs{*}<=rec(from(0?count,2147483647)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/lshift=>lshift(level=>1)[cpp]
-==>/mmadt/rec/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/rec=>[rec][_]
-==>/mmadt/real/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/real=>[real][_]
-==>/mmadt/print=>print?obj{?}<=obj{?}(from(0?to_print,_)[cpp])[cpp]
-==>/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])
-==>/mmadt/objs=>[objs][_]
-==>/mmadt/obj=>[obj][_]
-==>/mmadt/noobj=>[noobj][_]
-==>/mmadt/neq=>neq(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/neg=>neg(from(0?self,_)[cpp])
-==>/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])
-==>/mmadt/mod=>mod(from(0?rhs,noobj)[cpp])
-==>/mmadt/merge=>merge?obj{?}<=obj(from(0?count,2147483647)[cpp])[cpp]
-==>/mmadt/map=>map?obj{?}<=obj{?}(from(0?mapping,noobj)[cpp])[cpp]
-==>/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])
-==>/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])
-==>/mmadt/lst/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/merge=>merge?objs{*}<=lst(from(0?count,2147483647)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/each=>each(from(0?lst,_)[cpp])[cpp]
-==>/mmadt/lst=>[lst][_]
-==>/mmadt/lshift=>lshift()
-==>/mmadt/lock=>lock(user=>_)[cpp]
-==>/mmadt/is=>is?obj{?}<=obj(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/sum=>sum?int<=objs{*}()[cpp]
-==>/mmadt/int/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/mod=>mod(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/int=>[int][_]
-==>/mmadt/inst/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/inst=>[inst][_]
-==>/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])
-==>/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])
-==>/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])
-==>/mmadt/goto=>goto(from(0?inst_id,noobj)[cpp])[cpp]
-==>/mmadt/from=>from?obj{?}<=obj{?}(from(0?uri,_)[cpp],from(1?default,noobj)[cpp])[cpp]
-==>/mmadt/frame=>frame?rec<=obj{?}()[cpp]
-==>/mmadt/explain=>explain()[cpp]
-==>/mmadt/error=>[error][_]
-==>/mmadt/eq=>eq(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/end=>end?noobj{.}<=obj{*}()[cpp]
-==>/mmadt/embed=>embed()[cpp]
-==>/mmadt/each=>each(from(0?poly,noobj)[cpp])
-==>/mmadt/drop=>drop?obj{?}<=obj{?}(from(0?obj,_)[cpp])[cpp]
-==>/mmadt/delay=>delay(from(0?millis,_)[cpp])[cpp]
-==>/mmadt/count=>count?int<=objs{*}()[cpp]
-==>/mmadt/bool/::/mmadt/sum=>sum?bool<=objs{*}()[cpp]
-==>/mmadt/bool/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/bool/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
-==>/mmadt/bool/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/bool/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/bool/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/bool=>[bool][_]
-==>/mmadt/block=>block?obj<=obj{?}(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/bcode/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/bcode=>[bcode][_]
-==>/mmadt/barrier=>barrier?objs{*}<=objs{*}(from(0?barrier_op,_)[cpp])[cpp]
-==>/mmadt/at=>at?obj{?}<=obj{?}(from(0?var,noobj)[cpp])[cpp]
 ==>/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/at=>at?obj{?}<=obj{?}(from(0?var,noobj)[cpp])[cpp]
+==>/mmadt/barrier=>barrier?objs{*}<=objs{*}(from(0?barrier_op,_)[cpp])[cpp]
+==>/mmadt/bcode=>[bcode][_]
+==>/mmadt/bcode/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/block=>block?obj<=obj{?}(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/bool=>[bool][_]
+==>/mmadt/bool/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/bool/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/bool/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/bool/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
+==>/mmadt/bool/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/count=>count?int<=objs{*}()[cpp]
+==>/mmadt/delay=>delay(from(0?millis,_)[cpp])[cpp]
+==>/mmadt/drop=>drop?obj{?}<=obj{?}(from(0?obj,_)[cpp])[cpp]
+==>/mmadt/each=>each(from(0?poly,noobj)[cpp])
+==>/mmadt/embed=>embed()[cpp]
+==>/mmadt/end=>end?noobj{.}<=obj{*}()[cpp]
+==>/mmadt/eq=>eq(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/error=>[error][_]
+==>/mmadt/explain=>explain()[cpp]
+==>/mmadt/frame=>frame?rec<=obj{?}()[cpp]
+==>/mmadt/from=>from?obj{?}<=obj{?}(from(0?uri,_)[cpp],from(1?default,noobj)[cpp])[cpp]
+==>/mmadt/goto=>goto(from(0?inst_id,noobj)[cpp])[cpp]
+==>/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])
+==>/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])
+==>/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])
+==>/mmadt/inst=>[inst][_]
+==>/mmadt/inst/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/int=>[int][_]
+==>/mmadt/int/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/mod=>mod(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/is=>is?obj{?}<=obj(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/lock=>lock(user=>_)[cpp]
+==>/mmadt/lshift=>lshift()
+==>/mmadt/lst=>[lst][_]
+==>/mmadt/lst/::/mmadt/each=>each(from(0?lst,_)[cpp])[cpp]
+==>/mmadt/lst/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/lst/::/mmadt/merge=>merge?objs{*}<=lst(from(0?count,2147483647)[cpp])[cpp]
+==>/mmadt/lst/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/lst/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/lst/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
+==>/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])
+==>/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])
+==>/mmadt/map=>map?obj{?}<=obj{?}(from(0?mapping,noobj)[cpp])[cpp]
+==>/mmadt/merge=>merge?obj{?}<=obj(from(0?count,2147483647)[cpp])[cpp]
+==>/mmadt/mod=>mod(from(0?rhs,noobj)[cpp])
+==>/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])
+==>/mmadt/neg=>neg(from(0?self,_)[cpp])
+==>/mmadt/neq=>neq(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/noobj=>[noobj][_]
+==>/mmadt/obj=>[obj][_]
+==>/mmadt/objs=>[objs][_]
+==>/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])
+==>/mmadt/print=>print?obj{?}<=obj{?}(from(0?to_print,_)[cpp])[cpp]
+==>/mmadt/prod=>prod?obj<=objs{*}()[cpp]
+==>/mmadt/real=>[real][_]
+==>/mmadt/real/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/rec=>[rec][_]
+==>/mmadt/rec/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/rec/::/mmadt/lshift=>lshift(level=>1)[cpp]
+==>/mmadt/rec/::/mmadt/merge=>merge?objs{*}<=rec(from(0?count,2147483647)[cpp])[cpp]
+==>/mmadt/rec/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/rec/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/rec/::/mmadt/rshift=>rshift(from(0?prefix,noobj)[cpp])[cpp]
+==>/mmadt/rec/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
+==>/mmadt/ref=>ref?obj{?}<=obj{?}(from(0?id,noobj)[cpp],from(1?retain,true)[cpp])[cpp]
+==>/mmadt/repeat=>repeat(from(0?code,noobj)[cpp],from(1?until,true)[cpp],from(2?emit,false)[cpp])[cpp]
+==>/mmadt/rshift=>rshift()
+==>/mmadt/split=>split(from(0?poly,noobj)[cpp])[cpp]
+==>/mmadt/start=>start?objs{*}<=noobj{.}(from(0?starts,noobj)[cpp])[cpp]
+==>/mmadt/str=>[str][_]
+==>/mmadt/str/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/merge=>merge?objs{*}<=str(from(0?count,2147483647)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
+==>/mmadt/sum=>sum?obj<=objs{*}()[cpp]
+==>/mmadt/to=>to(from(0?uri,noobj)[cpp],from(1?retain,true)[cpp])[cpp]
+==>/mmadt/type=>type?uri<=obj{?}(from(0?obj,_)[cpp])[cpp]
+==>/mmadt/uri=>[uri][_]
+==>/mmadt/uri/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/lshift=>lshift(level=>1)[cpp]
+==>/mmadt/uri/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/merge=>merge?objs{*}<=uri(from(0?count,2147483647)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/within=>within(from(0?code,noobj)[cpp])
+=>]
+
+----
+
+
+[source,mmadt]
+----
+fhatos> */mmadt/#/
+=>[
+==>/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/at=>at?obj{?}<=obj{?}(from(0?var,noobj)[cpp])[cpp]
+==>/mmadt/barrier=>barrier?objs{*}<=objs{*}(from(0?barrier_op,_)[cpp])[cpp]
+==>/mmadt/bcode=>[bcode][_]
+==>/mmadt/bcode/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/block=>block?obj<=obj{?}(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/bool=>[bool][_]
+==>/mmadt/bool/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/bool/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/bool/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/bool/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
+==>/mmadt/bool/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/bool/::/mmadt/sum=>sum?bool<=objs{*}()[cpp]
+==>/mmadt/count=>count?int<=objs{*}()[cpp]
+==>/mmadt/delay=>delay(from(0?millis,_)[cpp])[cpp]
+==>/mmadt/drop=>drop?obj{?}<=obj{?}(from(0?obj,_)[cpp])[cpp]
+==>/mmadt/each=>each(from(0?poly,noobj)[cpp])
+==>/mmadt/embed=>embed()[cpp]
+==>/mmadt/end=>end?noobj{.}<=obj{*}()[cpp]
+==>/mmadt/eq=>eq(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/error=>[error][_]
+==>/mmadt/explain=>explain()[cpp]
+==>/mmadt/frame=>frame?rec<=obj{?}()[cpp]
+==>/mmadt/from=>from?obj{?}<=obj{?}(from(0?uri,_)[cpp],from(1?default,noobj)[cpp])[cpp]
+==>/mmadt/goto=>goto(from(0?inst_id,noobj)[cpp])[cpp]
+==>/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])
+==>/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])
+==>/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])
+==>/mmadt/inst=>[inst][_]
+==>/mmadt/inst/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/int=>[int][_]
+==>/mmadt/int/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/mod=>mod(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/sum=>sum?int<=objs{*}()[cpp]
+==>/mmadt/is=>is?obj{?}<=obj(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/lock=>lock(user=>_)[cpp]
+==>/mmadt/lshift=>lshift()
+==>/mmadt/lst=>[lst][_]
+==>/mmadt/lst/::/mmadt/each=>each(from(0?lst,_)[cpp])[cpp]
+==>/mmadt/lst/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/lst/::/mmadt/merge=>merge?objs{*}<=lst(from(0?count,2147483647)[cpp])[cpp]
+==>/mmadt/lst/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/lst/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/lst/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
+==>/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])
+==>/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])
+==>/mmadt/map=>map?obj{?}<=obj{?}(from(0?mapping,noobj)[cpp])[cpp]
+==>/mmadt/merge=>merge?obj{?}<=obj(from(0?count,2147483647)[cpp])[cpp]
+==>/mmadt/mod=>mod(from(0?rhs,noobj)[cpp])
+==>/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])
+==>/mmadt/neg=>neg(from(0?self,_)[cpp])
+==>/mmadt/neq=>neq(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/noobj=>[noobj][_]
+==>/mmadt/obj=>[obj][_]
+==>/mmadt/objs=>[objs][_]
+==>/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])
+==>/mmadt/print=>print?obj{?}<=obj{?}(from(0?to_print,_)[cpp])[cpp]
+==>/mmadt/real=>[real][_]
+==>/mmadt/real/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/rec=>[rec][_]
+==>/mmadt/rec/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/rec/::/mmadt/lshift=>lshift(level=>1)[cpp]
+==>/mmadt/rec/::/mmadt/merge=>merge?objs{*}<=rec(from(0?count,2147483647)[cpp])[cpp]
+==>/mmadt/rec/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/rec/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/rec/::/mmadt/rshift=>rshift(from(0?prefix,noobj)[cpp])[cpp]
+==>/mmadt/rec/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
+==>/mmadt/ref=>ref?obj{?}<=obj{?}(from(0?id,noobj)[cpp],from(1?retain,true)[cpp])[cpp]
+==>/mmadt/repeat=>repeat(from(0?code,noobj)[cpp],from(1?until,true)[cpp],from(2?emit,false)[cpp])[cpp]
+==>/mmadt/rshift=>rshift()
+==>/mmadt/split=>split(from(0?poly,noobj)[cpp])[cpp]
+==>/mmadt/start=>start?objs{*}<=noobj{.}(from(0?starts,noobj)[cpp])[cpp]
+==>/mmadt/str=>[str][_]
+==>/mmadt/str/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/merge=>merge?objs{*}<=str(from(0?count,2147483647)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/sum=>sum?str<=objs{*}()[cpp]
+==>/mmadt/str/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
+==>/mmadt/sum=>sum?obj<=objs{*}()
+==>/mmadt/to=>to(from(0?uri,noobj)[cpp],from(1?retain,true)[cpp])[cpp]
+==>/mmadt/type=>type?uri<=obj{?}(from(0?obj,_)[cpp])[cpp]
+==>/mmadt/uri=>[uri][_]
+==>/mmadt/uri/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/lshift=>lshift(level=>1)[cpp]
+==>/mmadt/uri/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/merge=>merge?objs{*}<=uri(from(0?count,2147483647)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/within=>within(from(0?code,noobj)[cpp])
 =>]
 
 ----
@@ -356,7 +467,28 @@ The following subsections will provide a short overview of the aforementioned re
 <!-- 🐖 ./main_runner.out
 */io/console
 -->
+
 ++++
+
+[source,mmadt]
+----
+fhatos> */io/console
+=>console[
+==>halt=>false
+==>delay=>nat[0]
+==>loop=>inst()[cpp]
+==>config=>[
+===>terminal=>[stdout=>/io/terminal/:stdout,stdin=>/io/terminal/:stdin]
+===>nest=>2
+===>prompt=>'fhatos> '
+===>strict=>false
+===>log=>INFO
+===>stack_size=>24288
+=>]
+=>]@/io/console
+
+----
+
 
 [source,mmadt]
 ----
@@ -410,7 +542,40 @@ TIP: The size of `int` and `real` in bits can be specified in the boot loader.
 int[6].inspect()
 real[6.0].inspect()
 -->
+
 ++++
+
+[source,mmadt]
+----
+fhatos> int[6].inspect()
+=>[
+==>type=>[
+===>id=>/mmadt/int
+===>obj=>[int][_]
+===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
+===>rng=>[id=>/mmadt/int,coeff=>[1,1]]
+=>]
+==>value=>[
+===>obj=>6
+===>encoding=>int32_t
+=>]
+=>]
+fhatos> real[6.0].inspect()
+=>[
+==>type=>[
+===>id=>/mmadt/real
+===>obj=>[real][_]
+===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
+===>rng=>[id=>/mmadt/real,coeff=>[1,1]]
+=>]
+==>value=>[
+===>obj=>6.000000
+===>encoding=>float_t
+=>]
+=>]
+
+----
+
 
 [source,mmadt]
 ----
@@ -470,11 +635,40 @@ fhatos> 6
 ----
 
 
+[source,mmadt]
+----
+fhatos> /mmadt/int[6]
+==>6
+fhatos> int[6]
+==>6
+fhatos> 6
+==>6
+
+----
+
+
 Examples of the aforementioned types are provided below.
 
 ++++
 <!-- 🐖 ./main_runner.out "true" "42" "-64.02567" "'the fhatty'" "mmadt://a/furi" "[-1,'fhat',[0,1]]" "[a=>1,b=>'2',c=>3.0]" -->
 ++++
+
+[source,mmadt]
+----
+fhatos> true
+==>true
+fhatos> 42
+==>42
+fhatos> -64.02567
+==>-64.0257
+fhatos> 'the fhatty'
+fhatos> mmadt://a/furi
+==>mmadt://a/furi
+fhatos> [-1,'fhat',[0,1]]
+fhatos> [a=>1,b=>'2',c=>3.0]
+
+----
+
 
 [source,mmadt]
 ----
@@ -544,11 +738,85 @@ fhatos> @x.inspect()
 ----
 
 
+[source,mmadt]
+----
+fhatos> /type/int/age -> \|(is(gt(0)).is(lt(120)))
+[ERROR] [/sys/router] no attached structure for /type/int/age  
+==>is?obj<=obj(gt?obj<=obj(0)[noobj])[noobj].is?obj<=obj(lt?obj<=obj(120)[noobj])[noobj]
+fhatos> x -> age[45]
+[ERROR] [/sys/type] age is an undefined type
+[ERROR] [/sys/router/frame] -> [code=>'x -> age[45]']
+fhatos> *x.inspect()
+[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
+	         lhs id       inst id        resolve obj                                                                 
+	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
+	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
+	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
+	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
+[ERROR] [/sys/router/frame] -> [code=>'*x.inspect()']
+fhatos> @x.inspect()
+[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
+	         lhs id       inst id        resolve obj                                                                 
+	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
+	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
+	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
+	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
+[ERROR] [/sys/router/frame] -> [code=>'@x.inspect()']
+
+----
+
+
 |===
 
 ++++
 <!-- 🐖 ./main_runner.out "x?sub -> |print(_)" "x -> 12" "@x.inspect()" "@x.plus(1)" "@x.plus(1).plus(1)" -->
 ++++
+
+[source,mmadt]
+----
+fhatos> x?sub -> |print(_)
+[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
+	         lhs id       inst id        resolve obj                                                                 
+	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
+	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
+	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
+	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
+[ERROR] [/sys/router/frame] -> [code=>'x?sub -> |print(_)']
+fhatos> x -> 12
+[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
+	         lhs id       inst id        resolve obj                                                                 
+	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
+	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
+	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
+	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
+[ERROR] [/sys/router/frame] -> [code=>'x -> 12']
+fhatos> @x.inspect()
+[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
+	         lhs id       inst id        resolve obj                                                                 
+	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
+	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
+	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
+	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
+[ERROR] [/sys/router/frame] -> [code=>'@x.inspect()']
+fhatos> @x.plus(1)
+[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
+	         lhs id       inst id        resolve obj                                                                 
+	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
+	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
+	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
+	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
+[ERROR] [/sys/router/frame] -> [code=>'@x.plus(1)']
+fhatos> @x.plus(1).plus(1)
+[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
+	         lhs id       inst id        resolve obj                                                                 
+	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
+	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
+	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
+	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
+[ERROR] [/sys/router/frame] -> [code=>'@x.plus(1).plus(1)']
+
+----
+
 
 [source,mmadt]
 ----
@@ -635,6 +903,26 @@ fhatos> nat[3].mult(-2)
 ----
 
 
+[source,mmadt]
+----
+fhatos> /type/int/nat -> |is(gt(0))
+[ERROR] [/sys/router] no attached structure for /type/int/nat  
+==>is?obj<=obj(gt?obj<=obj(0)[noobj])[noobj]
+fhatos> nat[6]
+==>nat[6]
+fhatos> nat[-6]
+[ERROR] [/sys/type] -6 is not a /fos/nat as defined by nat()[is(inst()[gte(0)])]
+[ERROR] [/sys/router/frame] -> [code=>'nat[-6]']
+fhatos> nat[3].plus(2)
+==>nat[5]
+fhatos> nat[3].mult(-2)
+[ERROR] [/sys/type] -6 is not a /fos/nat as defined by nat()[is(inst()[gte(0)])]
+		thrown at inst  nat[3] => mult(-2)[cpp]
+[ERROR] [/sys/router/frame] -> [code=>'nat[3].mult(-2)']
+
+----
+
+
 ===== Process Types
 
 A simple mm-ADT program is defined below.
@@ -676,7 +964,24 @@ a -> b
 *a
 **a
 -->
+
 ++++
+
+[source,mmadt]
+----
+fhatos> *a
+fhatos> *b
+fhatos> b -> 12
+==>12
+fhatos> a -> b
+==>b
+fhatos> *a
+==>b
+fhatos> **a
+==>12
+
+----
+
 
 [source,mmadt]
 ----
@@ -715,7 +1020,26 @@ a -> 12
 @a.plus(10)
 *a
 -->
+
 ++++
+
+[source,mmadt]
+----
+fhatos> a -> 12
+==>12
+fhatos> *a.plus(10)
+==>22
+fhatos> *a
+==>12
+fhatos> @a
+==>12@a
+fhatos> @a.plus(10)
+==>22@a
+fhatos> *a
+==>22@a
+
+----
+
 
 [source,mmadt]
 ----
@@ -767,6 +1091,23 @@ fhatos> *b
 
 ----
 
+
+[source,mmadt]
+----
+fhatos> a?sub -> \|to(b)
+[INFO]  [/mnt/cache] [/sys/scheduler]=subscribe=>[+/#]
+==>to?obj<=obj(b)[noobj]
+fhatos> *a?sub
+fhatos> *b
+fhatos> a->12
+==>12
+fhatos> *a
+==>12
+fhatos> *b
+==>12
+
+----
+
 a|
 [source,mmadt]
 ----
@@ -800,7 +1141,16 @@ This section will explore the following considerations when designing a _multi-m
 <!-- 🐖 ./main_runner.out
 1.plus(2)
 -->
+
 ++++
+
+[source,mmadt]
+----
+fhatos> 1.plus(2)
+==>3
+
+----
+
 
 [source,mmadt]
 ----
@@ -815,125 +1165,223 @@ A relational database _table_ is an example of a matrix, where the entries typic
 types. There are two general approaches to embedding a matrix or table into an `fstruct`. Each at opposite ends of the
 space/time-tradeoff landscape.
 
-[cols="10,10"]
+[cols="5,5,5"]
 |===
 a|
 [source,mmadt]
 ----
-[■]-[■]-[■]-[■]
- \|
-[■]-[■]-[■]-[■]
- \|
-[■]-[■]-[■]-[■]
+ \    \|   \|    /
+ [■] [■] [■] [■]
+
+-[■] [■] [■] [■]-
+
+ [■] [■] [■] [■]
+ /    \|   \|    \
 ----
 a|
 [source,mmadt]
 ----
-[■] [■]-[■]-[■]
- \| \
-[■]-[■]-[■]-[■]
- \| \
-[■]-[■]-[■]-[■]
+m/0-[■]-[■]-[■]-[■]
+
+m/1-[■]-[■]-[■]-[■]
+
+m/2-[■]-[■]-[■]-[■]
+----
+
+a|
+[source,mmadt]
+----
+  0-[■]-[■]-[■]-[■]
+ /
+m-1-[■]-[■]-[■]-[■]
+ \
+  2-[■]-[■]-[■]-[■]
 ----
 a|
 ++++
 <!-- 🐖 ./main_runner.out
-a -> [b,[0,1,2,3]]
-b -> [c,[4,5,6,7]]
-c -> [noobj,[8,9,10,11]]
+m/0/0 -> 0
+m/0/1 -> 1
+m/0/2 -> 2
+m/0/3 -> 3
+m/1/0 -> 4
+m/1/1 -> 5
+m/1/2 -> 6
+m/1/3 -> 7
+m/2/0 -> 8
+m/2/1 -> 9
+m/2/2 -> 10
+m/2/3 -> 11
 -->
+
 ++++
 
 [source,mmadt]
 ----
-fhatos> a -> [b,[0,1,2,3]]
->[
-==>b
+fhatos> m/0/0 -> 0
+==>0
+fhatos> m/0/1 -> 1
+==>1
+fhatos> m/0/2 -> 2
+==>2
+fhatos> m/0/3 -> 3
+==>3
+fhatos> m/1/0 -> 4
+==>4
+fhatos> m/1/1 -> 5
+==>5
+fhatos> m/1/2 -> 6
+==>6
+fhatos> m/1/3 -> 7
+==>7
+fhatos> m/2/0 -> 8
+==>8
+fhatos> m/2/1 -> 9
+==>9
+fhatos> m/2/2 -> 10
+==>10
+fhatos> m/2/3 -> 11
+==>11
+
+----
+
+
+[source,mmadt]
+----
+fhatos> m/0/0 -> 0
+==>0
+fhatos> m/0/1 -> 1
+==>1
+fhatos> m/0/2 -> 2
+==>2
+fhatos> m/0/3 -> 3
+==>3
+fhatos> m/1/0 -> 4
+==>4
+fhatos> m/1/1 -> 5
+==>5
+fhatos> m/1/2 -> 6
+==>6
+fhatos> m/1/3 -> 7
+==>7
+fhatos> m/2/0 -> 8
+==>8
+fhatos> m/2/1 -> 9
+==>9
+fhatos> m/2/2 -> 10
+==>10
+fhatos> m/2/3 -> 11
+==>11
+
+----
+
+
+a|
+++++
+<!-- 🐖 ./main_runner.out
+m/0 -> [0,1,2,3], /
+m/1 -> [4,5,6,7], /
+m/2 -> [8,9,10,11]]
+-->
+
+++++
+
+[source,mmadt]
+----
+fhatos> m/0 -> [0,1,2,3],
+        m/1 -> [4,5,6,7],
+        m/2 -> [8,9,10,11]]
 =>[
 ===>0
 ===>1
 ===>2
 ===>3
 =>]
->]
-fhatos> b -> [c,[4,5,6,7]]
+
+----
+
+
+[source,mmadt]
+----
+fhatos> m/0 -> [0,1,2,3],
+        m/1 -> [4,5,6,7],
+        m/2 -> [8,9,10,11]]
 >[
-==>c
+==>0
+==>1
+==>2
+==>3
+>]
+
+----
+
+
+a|
+++++
+<!-- 🐖 ./main_runner.out
+m -> [<0>=>[0,1,2,3], /
+      <1>=>[4,5,6,7], /
+      <2>=>[8,9,10,11]]
+-->
+
+++++
+
+[source,mmadt]
+----
+fhatos> m -> [<0>=>[0,1,2,3],
+              <1>=>[4,5,6,7],
+              <2>=>[8,9,10,11]]
 =>[
+==>0=>[
+===>0
+===>1
+===>2
+===>3
+=>]
+==>1=>[
 ===>4
 ===>5
 ===>6
 ===>7
 =>]
->]
-fhatos> c -> [noobj,[8,9,10,11]]
->[
-==>noobj
-=>[
+==>2=>[
 ===>8
 ===>9
 ===>10
 ===>11
 =>]
->]
+=>]
 
 ----
 
-a|
-++++
-<!-- 🐖 ./main_runner.out
-a   -> b
-a/0 -> 0
-a/1 -> 1
-a/2 -> 2
-a/3 -> 3
-b   -> c
-b/0 -> 4
-b/1 -> 5
-b/2 -> 6
-b/3 -> 7
-c   -> noobj
-c/0 -> 8
-c/1 -> 9
-c/2 -> 10
-c/3 -> 11
--->
-++++
 
 [source,mmadt]
 ----
-fhatos> a   -> b
-==>b
-fhatos> a/0 -> 0
-==>0
-fhatos> a/1 -> 1
-==>1
-fhatos> a/2 -> 2
-==>2
-fhatos> a/3 -> 3
-==>3
-fhatos> b   -> c
-==>c
-fhatos> b/0 -> 4
-==>4
-fhatos> b/1 -> 5
-==>5
-fhatos> b/2 -> 6
-==>6
-fhatos> b/3 -> 7
-==>7
-fhatos> c   -> noobj
-fhatos> c/0 -> 8
-==>8
-fhatos> c/1 -> 9
-==>9
-fhatos> c/2 -> 10
-==>10
-fhatos> c/3 -> 11
-==>11
+fhatos> m -> [<0>=>[0,1,2,3],
+              <1>=>[4,5,6,7],
+              <2>=>[8,9,10,11]]
+=>[
+==>0=>[
+===>0
+===>1
+===>2
+===>3
+=>]
+==>1=>[
+===>4
+===>5
+===>6
+===>7
+=>]
+==>2=>[
+===>8
+===>9
+===>10
+===>11
+=>]
+=>]
 
 ----
-
 
 |===
 
@@ -1003,7 +1451,30 @@ M = aM
 {1,2,3}.plus(_)
 {1,2,3}.plus(plus(_))
 -->
+
 ++++
+
+[source,mmadt]
+----
+fhatos> {1,2,3}
+==>1
+==>2
+==>3
+fhatos> {1,2,3}.plus(10)
+==>11
+==>12
+==>13
+fhatos> {1,2,3}.plus(_)
+==>2
+==>4
+==>6
+fhatos> {1,2,3}.plus(plus(_))
+==>3
+==>6
+==>9
+
+----
+
 
 [source,mmadt]
 ----
@@ -1084,6 +1555,17 @@ fhatos> 'a'.plus('b')
 ----
 
 
+[source,mmadt]
+----
+fhatos> true.plus(false)
+==>true
+fhatos> 1.plus(2)
+==>3
+fhatos> 'a'.plus('b')
+
+----
+
+
 
 ==== mult
 
@@ -1114,6 +1596,26 @@ fhatos> 'a'.plus('b')
 ++++
 <!-- 🐖 ./main_runner.out "[a=>2].match([a=>3])" "[a=>2].match([a=>_])" -->
 ++++
+
+[source,mmadt]
+----
+fhatos> [a=>2].match([a=>3])
+[ERROR] [/mmadt/rec] match inst unresolved 
+	         lhs id      inst id    resolve obj
+	  ->[/mmadt/rec] match => noobj
+	 -->[/mmadt/rec] match => noobj
+	--->[          ] match => noobj
+[ERROR] [/sys/router/frame] -> [code=>'[a=>2].match([a=>3])']
+fhatos> [a=>2].match([a=>_])
+[ERROR] [/mmadt/rec] match inst unresolved 
+	         lhs id      inst id    resolve obj
+	  ->[/mmadt/rec] match => noobj
+	 -->[/mmadt/rec] match => noobj
+	--->[          ] match => noobj
+[ERROR] [/sys/router/frame] -> [code=>'[a=>2].match([a=>_])']
+
+----
+
 
 [source,mmadt]
 ----
